[tool.poetry]
name = "babilon-mobile-project"
version = "0.1.0"
description = ""
authors = ["Keldieva <56282112+Keldieva@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "babilon_mobile_project"}]

[tool.poetry.dependencies]
python = "^3.9.6"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.4.3"
pytest = "^7.1.3"
webdriver-manager = "^3.8.4"
bs4 = "^0.0.1"
jusText = "^3.0.0"
ijson = "^3.1.4"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
